# PypKa-MD

./: .bumpversion.cfg  .gitignore  Makefile  README.md  pyproject.toml
pypkamd/: __init__.py  __main__.py  cli.py  configs.py  constants.py  cphmd.py  misc.py  topology.py
pypkamd/CHARMM36mpH.ff/: atomtypes.atp  cmap.itp  ffbonded.itp  merged.c.tdb  merged.hdb  merged.n.tdb  merged.rtp  protstates.dic
pypkamd/G54A7pH.ff/: aminoacids.c_old.tdb  aminoacids.n.tdb  aminoacids.n_old.tdb  aminoacids.rtp  aminoacids.rtp.old  ffbonded.itp  protstates.dic
pypkamd/G54a7pHt.ff/: aminoacids.c.tdb  aminoacids.hdb  forcefield.doc  protstates.dic
pypkamd/fixbox/: fixbox  fixbox.c
tests/: create_tests.sh  test.py
tests/lyso/: MYLYSO_001.top
tests/penta_control/ASP/: old_mocc  protein_000.gro  protein_001.gro  protein_002.gro  protein_003.gro  protein_004.gro  protein_005.gro  protein_006.gro  protein_007.gro  protein_008.gro  protein_009.gro  protein_010.gro  protein_011.gro  protein_012.gro  protein_013.gro  protein_014.gro  protein_015.gro  protein_016.gro  protein_017.gro  protein_018.gro  protein_019.gro  protein_020.gro  protein_021.gro  protein_022.gro  protein_023.gro  protein_024.gro  protein_025.gro  protein_026.gro  protein_027.gro  protein_028.gro  protein_029.gro  protein_030.gro  protein_031.gro  protein_032.gro  protein_033.gro  protein_034.gro  protein_035.gro  protein_036.gro  protein_037.gro  protein_038.gro  (+11 more)
tests/penta_control/NTR/: 1_protein_001.gro  1_protein_002.gro  1_protein_003.gro  1_protein_004.gro  (+146 more)
utils/: cphmd.mdp  sub_cphmd.py
(+302 files in other folders)
