[tool.poetry]
name = "pypkamd"
version = "0.1.0"
description = "PypKa + GROMACS = an awesome Constant-pH Molecular Dynamics implementation"
authors = ["Pedro Reis <pdreis@fc.ul.pt>"]
license = "LGPLv3"
readme = "README.md"
homepage = "https://github.com/mms-fcul/PypKa-MD"
repository = "https://github.com/mms-fcul/PypKa-MD"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = "^3.6"
pypka = ">=2.4.0"

[tool.poetry.dev-dependencies]
recommonmark = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
flake8 = "*"
mypy = "*"
bump2version = "*"
pytest = "*"
coverage = "*"
pytest-cov = "*"
isort = "*"
tox = "*"
black = "*"

[tool.poetry.scripts]
pypkamd = 'pypkamd.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
